# vm-x-ai-labs

./: .eslintrc.json  .gitignore  README.md  lint-staged.config.js  nx.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json  vitest.workspace.ts
.github/actions/setup-monorepo/: action.yml
.github/workflows/: PULL_REQUEST_TEMPLATE.md  pull-request.yml  release.yml
release/: util.js
secrets/: dev.yaml  project.json
secrets/_encrypted/: dev.yaml
tools/scripts/: update-poetry-version.js
