[tool.nx]
autoActivate = true

[tool.poetry]
name = "vm-x-ai-labs"
version = "1.0.0"
description = ""
authors = [ ]
license = "Proprietary"
readme = "README.md"
package-mode = false

  [tool.poetry.dependencies]
  python = ">=3.9,<4"

    [tool.poetry.dependencies.vm-x-ai-aws-serverless-similarity-extraction]
    path = "packages/aws/serverless/similarity-extraction"
    develop = true

    [tool.poetry.dependencies.vm-x-ai-extraction]
    path = "packages/python/extraction"
    develop = true

[tool.poetry.group.dev.dependencies]
autopep8 = "2.1.0"
ruff = "0.4.1"
pytest = "8.1.1"
pytest-sugar = "1.0.0"
pytest-cov = "5.0.0"
pytest-html = "4.1.1"
boto3 = "^1.34.113"

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"
